samples/_failures_safe/1761537236_f073c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef2212d4.c: In function ‘main’:
./samples/SAFE/__tmp_ef2212d4.c:156:9: error: expected declaration or statement at end of input
  156 |         if (strcmp(buffer, "END") == 0) {
      |         ^~
./samples/SAFE/__tmp_ef2212d4.c:156:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ef2212d4.c:156:9: error: expected declaration or statement at end of input
